@@ -12,6 +12,9 @@ Version 12
 --Capped heart bonus on knock-down to 8, to prevent gigantic heart bonuses
   that make you effectively invincible on higher levels.
 
+--Fixed level difficulty modifier number overflower issues (thanks Jimmy 
+  Andrews).
+
 
 
 
